tests/kiama/negative/name_errors/L1/8_condname2.ob
MODULE condname;

VAR
    bvar : BOOLEAN;

BEGIN
    IF bvar THEN
        avar := 0
    ELSE
    END
END condname.
